adjust styilng for demo, fix issue with lesson_actions, enable visibility of tip for instructor after payment

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -589,4 +589,10 @@ h2 {
     font-size: 2.5em;
     text-transform: uppercase;
   }
+  #header-creative .header-content {
+  position: relative;
+  text-align: center;
+  padding: 20px 15px 100px;
+  width: 100%;
+}
 }
